disable and update intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:ltRon330QYQWkJXaDec1SEnAZt4wGDh6fDXqQwH7QTDGO1AfpYKCfywBpcPcP+diKz3ZNjsdlYqdQSoYDbp24y0=,iv:oxQD3km+eVrOo+AYlTarWIGGxfAOjMD6rmwznW2ufyE=,tag:Jifu3X38jyyiTgdyNLjJWg==,type:comment]
-#ENC[AES256_GCM,data:tjaQh3vsJySVrgQVnXFY+lATJnrB9xx0AxdbCnVF8v8kpnXHr1Ne/SVFIRg=,iv:hUMFfhBxfAsnx4MlFf6HCSpT1iU4Yze2g7XpHYX8hT4=,tag:xg+JwLWVchNvZLc2vwaKHw==,type:comment]
-VIP: ENC[AES256_GCM,data:42T5bkEskUUo65yhIg==,iv:8rTlcABmvsm/vf4bDN4w/hRhsE3iPiWhe+tpKWq7sv8=,tag:/06gLK3cOQdNJK8foD0N4w==,type:str]
-#ENC[AES256_GCM,data:8jot/vE3qWf0c/YtjMowlHkaQ1LhDqIPmd6c,iv:ZLrOjQ8or5M88MpjnxdwcfAWmE+pfeMLzjfM5nC3PdI=,tag:afpWdoiQOkWxAa0US53q/A==,type:comment]
-#ENC[AES256_GCM,data:i5ufoMuhGTYSmZvjSeeBw2niBfRYao6g+ZuI0+5jwGGXZJ8kTf7JdDcOl5ziq0mXQza5tpoILZij3ibwRlu64M6Fq1rwIHm/BhBFvpyqnAqTTVLXHZzK6gE=,iv:GWxFPMfuuerwzoe7H31GY/eiS6/Jt0ekEus97ecKo3I=,tag:SRwENlHBzhDPVvmplSCkzA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:aq2fQssbcOcxVD6X4Go=,iv:gaZGmangiT/y8VmpnzRlMsmxslsbaMxYx7FU/Ckukkk=,tag:tCeUVg30UAtbi9SAdqa2+Q==,type:str]
-#ENC[AES256_GCM,data:aP/J/wsiMy4V8p7PeuH3c45XdstYPe2gDUdM7qcKktPBhg==,iv:4z3382p3CWFreR0sDlsm9ju/FAfSQoREtsFFWI9tyhA=,tag:Tb0+Q4ZzgdIkGq+HzX3C6Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:9M0r8NAeaWmkN+1b1g==,iv:LGbQlqpRUEucgdzUvbBxw5txgUUl5LbwDERrMDbhHmc=,tag:K21HUmI4CzHdQ4UzDx/wKA==,type:str]
-#ENC[AES256_GCM,data:oSsFrVBL9O5Q5h//X9g4dvoMPKnCUhLgVU1MYS2RsztLnEFXZiFzSJ5dWavo20M=,iv:/eZ1dOnwz3HB+sc0V13j+ca2eoEpxJPrLutsxkSHz7Y=,tag:8dI2DCLdAvibCSEYnhk7wQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:qjcoglNJP8rGpyzuTn7pLTHstl1lKuFIm43rhp3y7g==,iv:fwNTa6BGFBFEmo9J34c04m1Xxihxg00uUNrJ5aRhUrg=,tag:jWKL2wcor+O09xuTLg1aAg==,type:str]
-#ENC[AES256_GCM,data:DVJbsTfmt3/WfwpFCYOp3TfnsFswdDp/Myi9KfrebjLLruXht04CxOBfY+06uUqJoHm8iVs5B77uYU+mDnhAL66tF7sxYwB0W0gsIB11BEIW1g==,iv:BU+SpsYWRmqspZzGDcOI/VuckIr0ubjoZcWD3lPHBv8=,tag:DqAB4uZXQpnaGSTUT2n+Ew==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:oQMgwBHahcNMpTi7ovUd,iv:7C2nF92gn1O+9vBg9ow3/91qhGQKso6snNfBLx/LX2s=,tag:V/jMyMzMXiZnE7GjjzlXFA==,type:str]
-#ENC[AES256_GCM,data:NMX2yON0PRkqGNzZ1/aw9bqamwc3ULuDri8a1+CIImdM,iv:LJyfnLUlTAkNEmsZ50gtJNl+zzR/xxIIqukiZ6/44FI=,tag:fr+jL/clKSavQW+ehILO6g==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:3LJ64jSM5lb64R9y3lAM,iv:+qtekZVJbgaKOLTAk7vAAoVvqSuuYXssZHrqP2zFk/g=,tag:7hz7n+oFtTic+v/j+zlRLg==,type:str]
-#ENC[AES256_GCM,data:Fh/I22NTuV84utEPx7IYErmbgo0twtGC8OTFWXwT9wjStE9/x76ZdsZ1/UiY44GYBLYL7C1d65bAq6FukH3PgfLle+Jpx9/MaBDVKvQrGWY=,iv:b/JPF5x2/2AppSZO5fEMaZur9MxEA4jxdewK1HpCCIo=,tag:kNDF6OFcSstU95TAE+LaVw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:EKy9LWq3qQhkNqmG4NW7,iv:t7vSozxi9NtfXC00jORSmjREoibd8yUhwPuXTI7yjps=,tag:8tU1lcWt1xMXS7cWFwRLtA==,type:str]
-#ENC[AES256_GCM,data:0RM70yzFf4QWsGzHNO26tw6rMBV4qEYCk6y6NEuglv3BVm646c2JEMkfskFGYvfYO1eHcTdACutuLpCF4hayCKQaET+yt4mfB7BZwR8gr/H1wPU4jVL6,iv:nvrCS/cGyR8jiecKw+RIVZ2BAp5+5ZSjArfi7wulFfM=,tag:KGakdC8ZbhioixlMdt6z3w==,type:comment]
-#ENC[AES256_GCM,data:aE9jifndR9WZreGiZGBf5DRD28kEoJ/Mz/CdBcstrGvD/ncpmgwKC7HgYOKDMSJY+KzCp/RXFqZcCFxOmZ1YZYP6YLv5kMNN4eV0gQcSdNT5KotxA04J9eyF2R0QJogD/QzM84PmcyG/Rl7ulbMlHt0CLMTVqR17kL/+Mg==,iv:2jLWh6QJNWflHAydituIZAXj3Nky1ss8YSYoscJjQFo=,tag:3jILwe3RpvHGmNHvpG3WLQ==,type:comment]
-#ENC[AES256_GCM,data:sDiiD5TJcD/836Kc9BcBBZz+ea4lPpTx64yhzBiPgrdAlG9navv39T/XwMnr7EPDogGTkAaZupyZAhVKvIvsMDo8f/ZbXxRI0AbUi2lKj9U=,iv:g1SIjMeCOook1Kx0Pm1VwfXsWOYwUg31YpTz27H0AJo=,tag:TVhlo9/JPgMfEOvW810XOg==,type:comment]
-#ENC[AES256_GCM,data:Eu85PBNRN+424NCiiEg+3shAV5P1il0yrMTZbNpyROKo0QTuf4fa1ycBvSxh5iEE67ptEUP9,iv:sW1PPyv9TVSeZ8apXgTSe9GvQPZIzQAblHWpJrlImRA=,tag:q10G8qwz0DTSy2AWxmE1mg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:ZqpKfg9YDM8yH6jq,iv:dtMghSIXr/4/nFxnrZ3i8WxiWAsfkV8r2BE6gO5w1tE=,tag:Lv6S3nYeq03+IAj1W/lUVg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4NnNdP8h0zKTj2heqy5aLFI=,iv:tiF9B5GLMpLikCUV4U22SYb/e6dX2YjiyG/OrqjlSPg=,tag:5eiYxRsrlooJL1S85z4UhA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:BofbcB/lcY9YiI2ecYikEVe3Ltv+Yx4mvE+ZhRN6quM=,iv:T+XdzANdSwiX93q6EXLfuYjII/zYbA/geMKOxbucu2M=,tag:cWYXX+Sy3ND26DN1eIBR7Q==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:nJwJq+XMZSTSnvmqoHKrfKv+PwVkz5lTSjCJqNFeETtAd0FACu95iw==,iv:QNpmsyZl6t7nPcwgDLNLk2Rry56O9nncZnU+Xm2nXaE=,tag:fseRqW7ZcXL+RszOG3HWKw==,type:str]
-#ENC[AES256_GCM,data:PP76k6SOHN4TgCT1V3hxzA7DNeMIMwG+L1BcD/tWq1KkFMLp1x4EImyZDA5YFp4L+/S4agnrTjyjS6sl+tomdg==,iv:6cI3QQ2fIxY+nsb3Qfe+oXLCfR6lRYxo90M9t1inHLc=,tag:pKNeN85VCSgrBfzPh+iYDg==,type:comment]
-#ENC[AES256_GCM,data:Zit88/YNBXcaqW3/P3FStlcdwmTxLMSWkyRg2NhCMujEodJAmkTkBX2i2BN6EfNniy8ANe3riPI=,iv:xXGcBrRAWX9yaqyYNcHBWD3bPjmG2ecneh5Al5e8OnQ=,tag:i5Rnh4Z1I1AHM0tux5/djA==,type:comment]
-#ENC[AES256_GCM,data:upmBs6ocEGPHc5iKB3Yb9mReGCL/syHVxA==,iv:58PfK5kRNcb/Ua0FHJcON+BUr0PZkbR6Mvi3Hv8Ip4M=,tag:Jj1IzH1T5Jahy2xGQvtgFg==,type:comment]
-#ENC[AES256_GCM,data:xNj+TlJAqAkMmzrkzcMZB/pyrhh+EXp6NfVzX8f/ivVhtX5e1KLHHBtw98kdGQKHS06O5pQZ2p5ADf37IA/8EbBR19dg9ILEWKYKGjQ=,iv:YgcKwGrb1xtJ7U3Oosahegc9gYDXzpQ6z1QrpOt2DwM=,tag:0D9Z1Nyar9S5PU2wYzILtw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:LEyo981tLLobwPYAIecrP8ST8jy0ChgDhYZo4VyomYsVNH3NSNfxdH8/xE5UdhHM,iv:mqfgd3WenjXEfPpDsMAZ6yZ5XaAwl+CRmgynu4gCF7M=,tag:5MWd4aSxjMeal80ZU33Eaw==,type:str]
-#ENC[AES256_GCM,data:DNCcIaZjMLRuTE60BIBzRr2UuGH4RuMIk1WUA6NevVUrYRee7IMJ/gcik5qyhK5tmpFbjREcBhqM5Xz6IolPIwYoXCGewaU=,iv:lXYjRtLDf4qjBD++DF0zdzZ862Zvagzk0H3YoRyd/vE=,tag:p3VCI5cb3SQXxb1WmbRN/g==,type:comment]
-#ENC[AES256_GCM,data:9kEP0fnwswWFfM+4274yzGhAxg9skAU/Gq4wqGOnw4oxekxQskvW7dWu4eTnD+iG/ZTX4ZiI,iv:6oVn+s5k/batz7ybIZdUVHqIzcKXlUJq2o14E/UAeWk=,tag:s5PrOZfcajSFmnxEzfLv9w==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:gBs9aS4Erw==,iv:b4Eu5lOu6zPJjIuOMmIaXhZyGmJM5Y1iRurfcVlADkg=,tag:K5J1hXvCRVSPv4uzblzVUQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:fur/diP+7qKP+Hn64QekXOcsDgs=,iv:jgmhg7c0Tt3SQs+mwKwt6SgqVMoA/V9OENhBrCRvkkY=,tag:BFCtKi+/Mylb2RhDZkUFLQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:PP74yER6YKj6oE8=,iv:xf2UEC6mufhZ+gmPAr0NWtdKgeEt9Tn4Aw5cfFAfhQY=,tag:LHbp3wyTdASjUo7wJuIz3w==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:9uUQfN8411Xf/jjVBjqv,iv:0mBZXLdDQ0biMhgmKx0jNN88IrHhzzY9wTuuffvWHIA=,tag:eFiXXWZcM9c9/Ou1Kh0hjg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:WbIzq5NIbwcv2AtAo95KTiCXFfibA1F7SA==,iv:duIKnhY2Fle5AI/C4VCC08f/CilTIo3CyT9HDwW4ets=,tag:eKzdStnh2E7+j3d1uqXiUw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Ng0rxNDOMuXeq5PUQoV78D1ZTk1ZHVBlO2+dRlpznw==,iv:UCjCIvqIB5fu3F0dq2B+9ePn2/tVWQXAl5GBkobXaUA=,tag:vU11WRQzMfdZR+8huAs3QA==,type:str]
-#ENC[AES256_GCM,data:0PTaGW6RAouj6ihqdkRR9kOcP+h1NPExospru9X5peZqE1dt+64=,iv:6xrS9OY4COm+0vxTM/IzyrXF9flG31BJY2kQnIxBt2w=,tag:+8eAdgjW6InEEsZhizRDpQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:2LE42aCKBXUle81elQfbmvygYU4=,iv:eTLeIPPtj++qLAYUtBYrIo6dahoA40zOsSVmOUq8F/8=,tag:xbvqKD/9e9OIAZB3XmPW1A==,type:str]
-#ENC[AES256_GCM,data:zIXWEeTT+FFeOU8ME4E=,iv:AkfacwdknP2nDLsRte3LiWsrrFMiKk7t8GqBzBZEua8=,tag:njSOzjIPBI9/jhyXmj2BFg==,type:comment]
-PODNET: ENC[AES256_GCM,data:C1Tuyi39cfT+G4Wbaw==,iv:D4XnpPav8E5YbgPWrVsVnwMeQxkvjzKOvg4j3PLw7YM=,tag:HWjMG49QlJ5XJDWfhLUniQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:YKC5VEqL/CPv+5ZyGg==,iv:BwyTo5X3K3G1jr04aHW1TuwFqPjFqwR/48SINdmez3w=,tag:9xkwN5uP4f6duSprSllfUQ==,type:str]
+#ENC[AES256_GCM,data:gxD5dpFJ6fnehu7PXZHdu1cflXeVTZeXp1jIpaBNVkguaJ1VWsPFu3fy27AVjvDQJjiOznRQ1cRon+8qGs5OYJw=,iv:liXjWTDEFrVsUDqVzaaiK3Tjr8e3sfnbsYf5coGasSg=,tag:2Y7SiGve03fYpe00LVI23A==,type:comment]
+#ENC[AES256_GCM,data:e806tMRRUVePf3ajuftrzR72RK7JWoiBTArpKSY1RIguouTde2IluSA8lp8=,iv:uwCK+nUyJaa51bE3OmAa71rUXPxZEy4PExaazzsJI+M=,tag:mTCdGI8ggH/eVsgNPZ5UdQ==,type:comment]
+VIP: ENC[AES256_GCM,data:C6r3XM8tCWafim3yJg==,iv:/AN0YAvswlfF3T4z7wmBQxBAWdL4je3+yw56FEFjuHE=,tag:fF+nJL0AdCLyu/j9RgUaUw==,type:str]
+#ENC[AES256_GCM,data:m3bwQPMgccarWrHGwNAlEe260oQiODI0Okr5,iv:TqnHa+RgPBa9jinhn5p51Xn5i040yb4Ax8T1IZ7wZYQ=,tag:Bc3C1H0E8RwU1c0W2qpaVQ==,type:comment]
+#ENC[AES256_GCM,data:AZ/BZCRZ4q3vbbojeEKGBMhfC6GAdeVMFg/WwXzBcvDI4aYvwJL2MpEKFBzYPnXgc76nKE+dji/8kvOWbAHH4OyajATGQenxvRAkyP7Ho9u1IlDOYl2rSEI=,iv:SUa/KG+nxTMMFjyRrdd2MEzMP/6UNW/3YTHLkfs+jPw=,tag:rJyNhdYnNMhc7Fqm6sBSyA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:TC7LrhZCPIFLQWi8Tio=,iv:GKOJ/QVchQUi2YJW8dAkx/PAwSJQQBBv60QeKO/6/NQ=,tag:kfxhSjsQ7ktxnzMi4TJcYg==,type:str]
+#ENC[AES256_GCM,data:QlpqLi41fVMrDIMNa1nNROiSBf2Iv1GzRfQPDvrLHLTpZA==,iv:ZR0ce6YvTL6BogBnRA6di1QC/xiO/HRfrEhx3FOFQI0=,tag:CHc5J7pY4GeqTLSnwKhs5w==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:F1U03warPQVWkn1gIQ==,iv:sjpRdFvKU/Fc6bk2iB4KQAxu9Or0ejJytOQ99vM1jII=,tag:HfACvbMDOq1kpB8dLAfstg==,type:str]
+#ENC[AES256_GCM,data:MirNAlg3/xSKbTyZRo8Qt4sEmbXbYsa4E22ud5NgM84B9BUiwD17a7yVq9WhxK0=,iv:qn3Jh97Nq3nt8bfSQphX6CJlPqp5TCf74yRFEaodqdY=,tag:0+Z5ei/RVgRFUysB4AKnvg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:vyDY6sf08p3PFUVJBPRyvF7XV6lbKEP5WzYfeFhCNg==,iv:kOqIa/r8HAXwmFdT3VQ03pveUFOu24f1ajDyqdV9xn0=,tag:aE1t0v297oLDAmlxeIuHTw==,type:str]
+#ENC[AES256_GCM,data:usYRZQQ89TON2w9RlG+03OqN/5J7dDFl1Yir7hlGkeWAwZJ42NT2AwTD4OTSIrmjpsNDhYR7lviWDHJXU5WPsdZjBkXbqCcLnMUQOf2K1iTh6g==,iv:bQjBm9FqOBNluTFuJM26AdQzjP0KoNdUhahcMKL+hQ4=,tag:5gjeJZf6D0kj9J9JNdn2Zg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:jfkDG2dA6ahbq18a3wjq,iv:OzyYAMfG9M3sztZ8+F1KvqUev5mtRK9V5/ayYsVGMoA=,tag:zPrqsmS8WdorKASCzwIV+Q==,type:str]
+#ENC[AES256_GCM,data:xt/zYUG4njTDW6AFANRimVmVdUvjOdFCe6QqolHB5sYl,iv:DcXwAXXvJJSb3CXbMyEYF4x7sCT7P5ZPDASpEr9xk9I=,tag:614I6GLXc0B2UbN8inA7mQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:5doWNeq8F+5lH+aiFtp9,iv:mgDcWkL6rlb+uxlNBYfm7TG/gLekJw4ou4GQ4Ys3OKs=,tag:0C4OPl+N+B/WIw481kf9jw==,type:str]
+#ENC[AES256_GCM,data:vathlhFsCNWcWoNe2YO3g3RZyhPF9B4IH8+Y1pGZtbBATWGm6QyNWBCqs0BjXFbgu5oLan+VQjrzPEkDOSENoUrNnRnqdU/ho9Mre4Tblnc=,iv:Y0DtHxuh8GBlC4y4jtgatTPnRx7wy7sr8Q2rJzgrnZ8=,tag:FIBHynEbMcEsfLqyDGR8tQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:id5BPpHQpWU5/bzvFzep,iv:X+SoukyTCaXqYZE/D0YoQD3vL7ahcYy5C/hX9snGDOg=,tag:2lL9dHWfmDdIAhAOh2loYA==,type:str]
+#ENC[AES256_GCM,data:8iCt91y8GuYePWtPyZt5OSXmyP08MGAuemmVXsU8ld5pXSwNgrWqHBEj8+D0gUq0G5YE4ULSKBQfBNsBRsfqCeN9+KQxn5XBJpL0en1fx11D/D1ohCOG,iv:B9LuHwz2Fb4gSfwf7BHMFcMiLr4DY6+S7FYiwdchc24=,tag:mWhrx0q4vacDDd1+rLUzqw==,type:comment]
+#ENC[AES256_GCM,data:J+oJuVElAACR10v8FFxcsx2+6YD/oWZqfh4zbd+W1QP2EoZT0z/8Zal3SinHDW6v3pmq87c4D1fT/rAAt+BCsvc2Xkg+wnu4335cA3NrpZtuOKjm69dqDU3w89bJzi3IvaOwWp3w2WBtF2geQmf2CqgQpArC/qzY2MzZDA==,iv:VBzMa71jYvhpT6VdibCqXrqROZoaCZ5VlMDb0zn0Rf0=,tag:RCrJGDpV1Fss2QOiMvjcbA==,type:comment]
+#ENC[AES256_GCM,data:zl58sGW5IqADW+c84uEwgolKp4Z/gsYT01SpsWY3BuFjmUlQE1MG5E4iXTTxvwj6v+9oPZvqHihg2oPAMPBjjjzUG2xNMCsIXfReWuhgWCU=,iv:ZEGYCGXvqpBboYC3M+0Jrc+A7jT+B4prk5Yt65CEo/k=,tag:UiE3UkqWMD4UV5zY0Zyqcw==,type:comment]
+#ENC[AES256_GCM,data:CSa1T1QTMczaFcBgL2Bi0Mm/jdE5fD4g0U5kCllHndf+w0bD0yRsFqkKSjqg48v/DplWKttO,iv:KiNVq6anKAepzvSHsUERpt0ildNYOkau79kaEZLAncU=,tag:/0HyMTmOq+Wd8ZUsNurXQg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:eHcVOw6hfmfn4SWd,iv:X5rIqLZK0I1jcdk3o0q/ygwk8dt626E/3EE1z8KQny4=,tag:knEUqkqtLNlmyfNosebs3g==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:NnVH6tr6IKXvD0xr12t8spk=,iv:kbdPDLwSPMtasXJ+YxeJcmaZaBxIn7iTzWOePA5qOPg=,tag:tyqiymFvuwGALC/Pcog3sg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:GDiGDTUf1hD6V/q7fdPfcX/9LFpmts8dJcHYBDOvJ3c=,iv:xrSFdKOa56CGDrVdKWbTJsdUNeJnp9XbS2XAXACvDzM=,tag:0m2nuQC8XZx5Y+NJA0loZw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:EDAfp0s4n7BMD0je1BMiq90QY6n9LG/1BKL5F6R0Ru55HLB1mMe0kA==,iv:4cdd1qh4jsWq6VJ+COwBLrFgJL5Umgwih2ZVnwy1UEM=,tag:u2A2SS3Jvu69B5knZI7Flw==,type:str]
+#ENC[AES256_GCM,data:yH1QPG89hAk1FWZqqjEoCcZDD2KH0TD2KcrdbDc6cFbIVWa9vrtJnuAa3hWDkhJf53qUD+VWdEwxUaip9ibMKw==,iv:jYShqpDa3HGr3+yCIiUmxvjdHWVKetPPLDUaLeum3ps=,tag:wZKvaRCvZz8tD96LbeoEkQ==,type:comment]
+#ENC[AES256_GCM,data:4QZpsik+i2nFxCURqgYehwQy3Vchvs60WiQ2G3e+QvBW0Dgd2+jOdnPwiCitwRdoEPuTiYJhajk=,iv:+qRgKJsglMdGKu7MPLId81Y+J2/KpnWQC+k+CMEG9Go=,tag:3g9YZj6eVDr0nHaQ7nZU7A==,type:comment]
+#ENC[AES256_GCM,data:aIj5r30h+OSBTU5VY1OYq5L7YGtXUhN8Dg==,iv:ZJv7luNIeFmwprkAmnfGihEP2az2gIlusjW8tAqs0f8=,tag:L/aLnhDZqJGZu3bICUVMqw==,type:comment]
+#ENC[AES256_GCM,data:5pdY/hQ1jsOsmwYOqQRYo8F8LLgcgRfbvJKlhhFJo2hnLW9PEvlnFOpKFoS+7ZwaMp5W8slyNWlOnIBmi3rczA+2Izk7mBVOlAh7YYM=,iv:pIXaGOpbA6b86SJbEHlsFe06zJ61VgIVLcBlFB+ZAhA=,tag:i7FeczYWUDtmVN+DghXWIg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:g/1V+ZD2arn6Kipp5BgcCHBrrDR1p70uDGR9QpsKgoJUMYuhZJeC2Xqx7iDRfyks,iv:i3Ix8LxEb2I3whdWB3+cEGKWnCtniGwktAFy7Ftv9lM=,tag:hoWvnTUFmNKlg4b2XKu9aQ==,type:str]
+#ENC[AES256_GCM,data:Db36J2GACoJ5P6HgByR0dpZCW20sGfPvuaxHmlkPO2MukurFvddpkMhF6qo+GvIqYGA3tGiCa1rGa3tWehdyfqh5NEInOlY=,iv:/TDU2RwRmQZRuVLGcOcTrrrDuCkdc2GL3R232Vmu6fs=,tag:ioQ8899SokEpbg8zFcXcxg==,type:comment]
+#ENC[AES256_GCM,data:PxFtrmrEYMbPDo8dxf/Swj7wpJTAkat8ZAmND93oJ8xdT7XrfOkz+K18NZic5usucdP8qLyk,iv:vSvppyix7s9dNVF7CNyZ7SU9o49qDAowz/L8fleIuZM=,tag:n7DF2INlHxkC3EoUVWHMjw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:a7uxzTO8GQ==,iv:pJwllpkyxU9585S6VZCnyV3G804qP/fOL2vMb6uZcw8=,tag:WW1c5NC/v340DRbM7C978w==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Dcl2HEPyiVtSI81bzjRVg/W5pFU=,iv:QsKZkHcjsUfkCABGGpuBWB7lZNRdy7SX2XFlPKi9pxQ=,tag:8wlOykg/qPHER5GOv5Gruw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:xsHZQL3ZL5j32hM=,iv:bULzOiOgNcrlfxTwnsUUmVLNFlLd2kHNmEB9qBNBES8=,tag:fBzwv6SBuidkB040q68KjA==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:bhAQQXuQFvt01HOl3TIm,iv:HrQAoRWBNexevnkLo9bqEAmwK8YfINdH70S2Q4lmUzk=,tag:Y0WbIXsASNuePgxVX0Tf+g==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:qCFfkmdEWST1vs/VdeZXphndbZtSegAaZQ==,iv:jQTB+wJO3RMjf29AjBRXZnmbzB940kPmsRpjLbVQJC8=,tag:Gwz6WJODPuYYxUyBJ3FZ2g==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:kR/PrXvszY6yEjnACdtoNrLyTnT1o9eDVInQUowEfg==,iv:iBdf85fAFR7xesSlB4+4CGtN10zeMBIoRz92+8FWtFc=,tag:MCR1OExon1rS397evhI9VA==,type:str]
+#ENC[AES256_GCM,data:pvRqgCLUhyrrqD8KIu+dBqyLvGvBW3/p4Xtq6HMKqP84b0yLX5I=,iv:u8ctV+eZPa8c0wF9D9NChKeGq/JyyapUxpwvN4wVv/A=,tag:6dxe2RF3HShPNfnMk/fRnw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ER5stc2qVYACeRvB9Z1Q/CJRH6o=,iv:csbXhNbEoG2G5gi0fdafqgKkNO5Ai4VKkm/wSsQV40Y=,tag:FlvZKFzRmP9wWS/1ApYuEg==,type:str]
+#ENC[AES256_GCM,data:h9FnIDa/MxYP+ciYSTo=,iv:ZQzdIG2/Q6NQ4Ue9aBgeGquN7TlBJf8C4kX2B0oLK4w=,tag:ALsTwBsFAGjJzfZWSxLnlA==,type:comment]
+PODNET: ENC[AES256_GCM,data:4Gi+qrpINC6IGQilvg==,iv:XMHcZwinDshBdri3DxuQxjkJ6+TOIj0qvHZl7IVf4i0=,tag:QO8F1QcJfh9eTB1zXQPL0Q==,type:str]
+SVCNET: ENC[AES256_GCM,data:hjZHYJlxunuaG1z6BQ==,iv:e5vjVqkiIjRbs+MZg+A3XSd/1vRwUUqqJ67DBjucAxU=,tag:GE5fDw36EwZgN9sx1jDEUA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnRjk5VDVqa05GaVpKQmVI
-            eVFHYUd6QTUrTFhnazEvZVFJNmdEMXRQVDNBCkxXKzRJbHpGclQ0Y1hZQmFPVngy
-            U1l0QUxBZVZxT3JYRUNMRHN5OHFGQlUKLS0tIHhOY3lMUk9qRENGa3lPV1VrTlpD
-            WkRmV3RpSmhkdXFQQXhUVkQwQjJVT2sKtZNkJLQdRt7vdvZko2UlvayI6DZlQ+iI
-            ZHRgqJQbPGlpy15aAhZUcoYj4nJpD1ItNiAGcGZTgyPYytrhXCOaeg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRMnF4bUpoU0w3RGNJSWsz
+            QmdSSkZNVThobDRFY2tTL01Ca0lkTXJlQUZVCnRRSmM0RElCdi9qUjF0dStTU3l1
+            RkcyOUE2Vm9rTTJBMXlBRFRsSFZIOVkKLS0tIGhjNWRPQ1B0eGhGTFNFZmRrb0Mr
+            WnVmTHlMcit1eG5QR0cyTFE3ZEtXd0UK3ja9VTrfbQX65VllsjxWDz0Cellr24ow
+            TWkpCNx40awcFI3SVMM4RnrGcNcZUjtqYJsLSIyPwyTz5kCNGMkeIQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:28:17Z"
-    mac: ENC[AES256_GCM,data:TWUzJT5DEfOau1dGwlvXyAyGtIyw0yKpNEbb9G1hJ5dSEbzT4CSyJc59EPvQyN997fhs1XNVDif4QEYE+pYi0csYFBZoFHwzm2C+uM8k6bDERLrIulCb0o3nz+9iLt00KWkZ24qrURYEZ3Lxyv6YobsGB4gusovfVzk8TxUG0qE=,iv:QavcEXd4ePxZh5PzD79lr7LwUecFOfVAhtxba7MiKss=,tag:fW+6Cp157cz/2mQfHp+Ktg==,type:str]
+    lastmodified: "2025-01-19T19:43:23Z"
+    mac: ENC[AES256_GCM,data:IsDTBW2O017fAgvSoZYQjmBQ+b2mKsS5VzFiqPClJd7Tq2calW23W/2mIZLGucKhLFRdXYpXxioYnIaW//2i9B2nHy+f3+4Oef8nT6oavALARxECRlKPq+UYvW3jhWuxCl1Mf35RnYAo8t1rLaWRhsiXTvwzmea+ggQ2BWIu+ao=,iv:ZCY0mYRfaJWIHIY4r1P10hOToaq7Vnd0PR0XhA2razc=,tag:OXW3cFO4j/vkILX9ljCYbg==,type:str]
     pgp: []
     version: 3.9.2
