--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:pXIo8McRpgRWh3doC5392zNj0zuJat2xIOWWM9aMARBOJGe+rNjuKOFhqtMWd1rr2kmKA+NMmw4wBZXdyHePShU=,iv:cbHG29mYByHVcdfQH2zb0ctN68AGEYC1z7RnN3BEPBQ=,tag:6xw3N4a3cnJRkQ7i7Vtryg==,type:comment]
-    #ENC[AES256_GCM,data:z5CHFR5eb7vgle053z/lJ7NBVUrm723TYmtr1NGnsowH6I+Ynitj9fmCqP8=,iv:NrWJsRxXIaUWcufVnxevRVx/RwJx9ztELLGN0411zao=,tag:kJL69uizGBZvRXsak5xxSQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:Ll+L/Ln0pHSRBhNU9g==,iv:uvqNIdQFRXb688kGFtj6MM3ctSENIuzhdGUuZmzSP3E=,tag:SF1ikZfE7ScSyb9a85H4qg==,type:str]
-    #ENC[AES256_GCM,data:BWOczbuSACBmECsNOZNX2qiTAvzPztchm/WX,iv:0tJh6crJBUS8FeFpNZ/6yfaos2XWCHeOCByZxSn0wxo=,tag:2lxmbdrsRBByFIOlMm6/MA==,type:comment]
-    #ENC[AES256_GCM,data:5vbs45ivjOY/zZtqd+rDDXJoWoP5egiB5VJ6tEihqZ7IXcqtuvOLcr5ZATwP9+qLHKAY0u3Y/1n5JvA13QQn4PTBLJltCKUx+oCZ0HQSlqpqJ3iyMnSK0Vc=,iv:S83NDRAxcYyFrbkynF+QPBwgLwoU8XDedyyAtPd7vYg=,tag:81Qain4sAdYgcV4dp3ZYkw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:H47MEUSk/F8DNJezH9s=,iv:X1W+7oi4bmmxsRU7mWpUccl4FixFnzslKPJA4GJlYJI=,tag:nNnUZt+sqC3OKAThEdY2UQ==,type:str]
-    #ENC[AES256_GCM,data:Kx0ck2LH8g6CnNNyu0wIMxNYyiapJjf8HM54sx/5TDyGlQ==,iv:khxBxrB2ZWR5J1OC3SzMipFWf/hqeXkZwXg1Xw50La4=,tag:xqg+XFdmw9nDvp9CIGqN4Q==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:sB1KlhRTNjMhKEDkag==,iv:Uy6vscETZMxs3qVf9cmdBAyarleaSaQhhwKE02ErT2Y=,tag:jGR23G2wKfrDGWNRSu3I6w==,type:str]
-    #ENC[AES256_GCM,data:5WETsZJ92X500WHcj96cvt0lpOEB21SjS56M/OCo4BwVXGh7DVkoE94gWx+pLtg=,iv:eCsKYDY9XDUBz72ZlYQODSc5yqpXV6FCYS7biYgHByQ=,tag:ezfXiRhT8XG3p0ZpiSVLZQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:H9MFAgOOCyNV9abq+v/lpl9dNg8COPNoLiBW7/OokQ==,iv:eKpb/7AUZgSiU1sEno1s5ldTpLXmzAEV88Y22UiFyks=,tag:C4uQ6jtsH9tIGPDjHr/TAw==,type:str]
-    #ENC[AES256_GCM,data:HidTl3mZcQVUSst04oB8o8FAkoFmKFvCpB6RqVkkpPO0hXOFYq76YFrQb+vLWnCLGrviFixpJHfXIqBSfpwMZIsQv99KWcn+kKSD2xMQXtg5cQ==,iv:O4PXGIQQZN/Uo6z20u93hLfqfjpqd0bzVDpSIgiR7zE=,tag:H3FMa0QQ56H0hxFVHTMj9Q==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:HjlRPUee2aMDk1/qjoD0,iv:63ofOju30U+qoNXf1D8Fi3B/1AlTQ6g0N9jXWDSbdEs=,tag:gCJxhAgHtqCOL62tEnc6Vw==,type:str]
-    #ENC[AES256_GCM,data:B/TAaLNQLWJe36Iku86o43RcAsOD3J/lBHmO8hmDuZiA,iv:TRD0LDl8XrxdPaEPSK9ws2ZMpUapZda8nujOiegdQ4Y=,tag:U1lCRhjf1VxmNdt7VxtleQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:og8dOnZDlYSEcSySgEYt,iv:PIBP0KAdgWQRiE8yCIlEfaS4rcKsI6bK3YIlVLWoQuw=,tag:crfaM8pYh9ziMymdcAg+4w==,type:str]
-    #ENC[AES256_GCM,data:mYJspQtTS0MzOEzepGhPf2v0J/qsUsGy4SaR4Zp0yRL313MWPitpBQXmyhFtyzPIGimgjDEGqIhIwwXLdpwVWMWlHrrBoC6XSuYDyGrgsYY=,iv:Cl4rOHyoujTwbnSB9IhhV1Sfs+rSMvFId9Ox/nJNlK4=,tag:0P9+WvkhzJMlHlIJb/lWCQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:HycjS1NQrfpLkiAePQ2w,iv:S+qxQg1X1dz5Cq/6Velr3Dv6PLMMPwxMjOaU/0LzpvQ=,tag:MZhnavpdJBon6uhxd2XjSA==,type:str]
-    #ENC[AES256_GCM,data:WyshHAArM2AcLL33u4H0Rz5fdA5Frfgl98Qf9TiXCvdF6yMqlH3pEgtZRl20Luv7QwJICEJABscpK3Cbd/FKiv8rBe4Oj/XwAV/iCj/d7bMZwfOy184b,iv:Owvyt2NmpynYvUfuJvVMCSRd06XiG4zpQ7L8FAwLu4c=,tag:t39dzNH0DrRhDzt7Se4QZw==,type:comment]
-    #ENC[AES256_GCM,data:EtFvSAwVXG7ltMxE4JL4vSNB1ImQdU6teta/o8zF/5HtZvzpUHCu9VvCxu5Nbgcl4tCHxQTf/0xerIcImSoNUGkaxZ1waI7wXXdfUNsajG10vGEX446gqWJnwlGa2FX4XIpUWengW0wHdUx5OIca6jB3Uvw7WUIJ8ht5Gw==,iv:1soRyymQlZsW4md0sTuEWOC9qC7qb9iY9/B6FhipTIM=,tag:wyLjSQjaUtp4pzWAeO1zIQ==,type:comment]
-    #ENC[AES256_GCM,data:/nz5RL0WB1hze9rQnvZknVBPYmUAmb5K7GWGIppoelfLp0Y2ro6ZMZrlj0irIAActST8Ko8yG0wz/t2zx0pK3LH4KK27VRREg9NWcpX4OC8=,iv:NeAvgwS46VElMA/a8Ag2WK9+bt6udGWPyupyJwym718=,tag:6tErj9VvC2RPsVh699agDQ==,type:comment]
-    #ENC[AES256_GCM,data:8/K15/UQQP8ET031FwQB7Lv5PsPnB+LUI4SJxMKrztBjT3j4ZEi3BtwDhfImDBUPVrHVPpjf,iv:hFjtI4GpwfBdiRdigx+MJY0jzo0Fz3QvF+BDnd2K/0M=,tag:873TuplS72Q/RiYFuBd13g==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:mulMEZgmIdMOh7xC,iv:2xEQONbFbZ+/beX+kBTM08m8/G+mLqyWo8cVJGCzyyY=,tag:6mhbeNfWEpSoYJX4WpU+Jw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:+cahiN2kPKdtJn9G5r8JEns=,iv:hj/yClxqlHdJ4cij6A8GlW6sTZTEG58A3YQ26BgPItU=,tag:qoXhTYrSrkqafvdd3ZGq6A==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:gzQICDrGcQD8qWCWXDnxpQmIJFZedcQ62gvnTf2B9C8=,iv:vaKwiDX+QTXlV0UX+Tjz+ZNcvW9zZcUoS50HlOt9FKo=,tag:BHTNFPQWvt3vKgwqL45lPg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:DfZ5mXqGSZdbn29guHqJ5tSmRxiTTauyvT2t1W8Ui15CnLRlneEGTQ==,iv:L9PqGNzxaaqXdyGxWtA+cuMJMj+1cjGnT/4HktjUdbs=,tag:iHXpQNiASvMVjY+C1dXcEg==,type:str]
-    #ENC[AES256_GCM,data:C/54SBlCwfo9PIcmYUnWHE7GYBnu8tJ8Z+VR+QrYK62as/bYhZ+Mbyw0Fnpajd1QbFXyRwLchJOj6JfD5isxqg==,iv:nT6wsTGevihH1Tu17y2W8LLW0q8gKzq1pcK9nol26zg=,tag:oHCVqp8kmQOq0+ZnGtvbiQ==,type:comment]
-    #ENC[AES256_GCM,data:IA22j35ewKdKuu9GAVaQzjxN4KpMm9QJdKNwO/qc3ynS6aCiuJtNtFucziNrl9/pPDXIxT1q7g8=,iv:U6IYh1sCJYUz1/ByBvwzZmA0XOvckeBGiRRxOcVwmEM=,tag:iKUOOT1f00zo2GPotjSBQA==,type:comment]
-    #ENC[AES256_GCM,data:OiekSmgyRNs4pdbsHpTjmChRaHC5Wb+2Iw==,iv:jCjjJvAl68WZpU38u5gLHv96nwxHivC7HjNfxQ4xu4Q=,tag:hWnufugra5koU27Or4pArg==,type:comment]
-    #ENC[AES256_GCM,data:NjwATd2Ud7q2rfaywe+4inUu5CGBY1mjZTA16UjXvDUkT/Wt43NU6FCvppA2lJInavo2PA3w6MMuefX/mp6p4QV8iv52GHnuN7VpsDo=,iv:LXP8OLlSXoCyJKECFBcdst3+ukONLPDxsJvFIpdg9ls=,tag:SGQ8w/VR6Z68L/PX5Q08wA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:PeXmeC9xYtAFyGYOBrCJ/cyXA8w9YRpnK4rGjWxbf1LLai8qlvuzyjgXjnBGRdPq,iv:C1VCgi/2jTf9hCXSuQoVGXPyBm9/rHDgig5cu9ksvZE=,tag:X2/BPN9HautrtUHTjNfxNQ==,type:str]
-    #ENC[AES256_GCM,data:z8aUFlNq2M57ur/+qY1WWdd7m2WV+u9Q711Iu8yc9b0kFKFWyTOUGeIgYkNoM3WX24vQlSlq8fNHMAzAdYjnnWX87atzI10=,iv:v1wIau8qPIsD3pen7JA+q2Fy/sQyoNwnlbeTS0E4xl8=,tag:PgHZKMPQrj72wEVczZbc2A==,type:comment]
-    #ENC[AES256_GCM,data:1GZOQ6D09psslSNE6ypxv6vHdnTdf66jiTdzuGXnwUHy9Uhj4D+Y1VIFAN0bmNVb9Pbv5OIU,iv:tB6Mle8rjstvqXAXTDmFPa6qZYgAYG0Z7N+5aHt6420=,tag:s8TFuDGAK7H57tS8m+Sb3Q==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:TZMjun5f/w==,iv:9KwNlc2vaJBqsYuoSh5DLHyowH14MdvOeC+gPv0CLdQ=,tag:PPd3k1uKx7S9SUBoiuOqlQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:u1SJO6Dr9MtRdXbGi+LPo+w0OQo=,iv:yuV9+6lnd5q5dJ6ea8UAv5wi6N8gc7I1CsKzCJaSYQY=,tag:iyvtAYPnxW9a0SnEOXRDVw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:a1X579w+/+dK7ZE=,iv:3XesGqV7iuqzwMGm7bG0yIMH8GPEcoJXoc41Jx9rGNE=,tag:hyPdFNdxrwZjSIMr//A/RA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:Ng8U2rIvmmy8n0cKVbC2,iv:o965bmBaRuzV7Fku5X1mvUekPN8Cp30oTCAagivXRVk=,tag:DDZZ6Ln0E6/MUlw729eN0A==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:a+dll7HudMMCjTpbhwuhGxyZGUmRxUXsjw==,iv:fYUkFDQ1dZ+nc+PGeRcVabSfVCntP6Yjk0InnxCHC8k=,tag:UKAmZPJ+KGWj2o8kAT4mLQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:ZWej8gkt04jO9I1kTrypcV3cEwqtD6cl2QbBCpVdSw==,iv:aTCDYqROw/e1X7OdkBBkKMLn31FyfWVyFuw7Jm72038=,tag:h17Nx940DLK4yTVvxkMiUQ==,type:str]
-    #ENC[AES256_GCM,data:+DyPPJH1ExgAs28NTBTAVHL5+PjTdBP98R6IDo1UNS+dHirwLOE=,iv:w/pPTQEwZgpQf5ry4jSzZvpX9zapSy9z2LCiHlMw2TQ=,tag:e58EQCsTgdJgOc5PKPDK1g==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:GpE1fTwEr8NaLsUrOV6rEvvVfgM=,iv:IYzCKR3qmBONX6a19eDGaJ1Wldlvq0FvedKLvtjrHEs=,tag:erPG34LBz1ErYA0VgRz54w==,type:str]
-    #ENC[AES256_GCM,data:Gu5mHAbsgS01EEnWh0g=,iv:RBnZCRVZ34yazymxRqZKslf19b1+hEUv8LDKhpc89P8=,tag:HbQODYL0LETTfVU55z8hJA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:DVxciup2mBWnERWf4A==,iv:Ed7X5cFdkhtGqWRgYj4fZi80CIX42vWMklVcvic0ggo=,tag:+fiOipTTL6kOlmnxnQ831A==,type:str]
-    SVCNET: ENC[AES256_GCM,data:slntyiJ9buol0oJ4BA==,iv:D910NmdJQ6B6gZxFZhMuH81VV5lTFq6UpDJGigkgKac=,tag:rIH66ZYBgns/CV3SL3NOsA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:6K19OQ==,iv:pSU6wKr06w8uV9Cm3inAKX8g3nxg1l/v2E0HbIcZpss=,tag:7tlJ81oobbQrTlxk/pc7Uw==,type:str]
+    #ENC[AES256_GCM,data:dwLBvuGMwn51LvJmtL1I9GLVhNANZDOvMk4Cb1c2vXAFY3vvxau7eHrnIc4WvIGQK9lHoCSpW8rSVQS07Fw/sXM=,iv:M5/KOjPRCTHvKjSD3H7Q9KE0lUs+xDjf2GFYzl9unls=,tag:vtCGzdneok0shJxJFVWdBg==,type:comment]
+    #ENC[AES256_GCM,data:rTz44UdjnYN8un6tQZNK/rsw8pX4oY1wfWjLVzivGqW1IPBmgZzpV3jE00c=,iv:ave3Yv5zOjaXdfYi63gKGm/PNxRpwgU3bRIMEkhl6aA=,tag:4e3Z06s61RXZM4YYBMvuGQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:vUxbRPtzIj4Jmo36jw==,iv:MiCg7unogauai0HksCBJtM39cE7Luw0oBtivUfgd9I4=,tag:psfsTMqzzUYXCu8zqvboOQ==,type:str]
+    #ENC[AES256_GCM,data:FADQL7D/JE6epozvF0k7yFeepPtrar9uazi7,iv:T9ZUbblREQvyie9njnZoLKAG9RZrORjvZDyPvRc89Og=,tag:NfvgwCAKtl6MRkzcyKq0WQ==,type:comment]
+    #ENC[AES256_GCM,data:0o4EWd2Sc4MYw92bgl1vREmf7OOUuubTsKkwGpS2OEFDcZc816BevCv65MkUYQgZ+xdhJytFH0VkdITSmYzCRu03Vtzc5voMdi3iRU+wbqGdbcf33JBDVyE=,iv:hTl1uf040/YegHTYXRp2BLGB3wqYMsqaaU+eq0Q3h3o=,tag:UAnlt0s0bhJPfCVxBfm6XQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:1n4MORr62ThbUUp/8k8=,iv:xCW6/xyoYdlgcK2dDYsOMt531b079M8LNMh+vu8VSvM=,tag:a+B9ZXZlxU/10IC0YEXjcg==,type:str]
+    #ENC[AES256_GCM,data:yX24y1DVOlVyJ80P3GIo2RiSZ6NTmZqYScs3bKj31fm9zg==,iv:cGzAmjoO/hRRkjqlHIYZzrSv3999A6PF6uLFXCk4uiU=,tag:T64k00sKXrWZPfRSP4pNyw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:vy/Rx3GYtY/d56tWFg==,iv:1w5L3+BTJVlaGQnv3U9BYG2EQDrzoAegPeVwM6OwBtQ=,tag:O7szEH1DKEnOSNNaW5K9mg==,type:str]
+    #ENC[AES256_GCM,data:+8MG3eKvPA/JzIrVzWrwZiQveK+9SFjQj9J75jNSwpAA3OrYEJ5k1u631vps5hA=,iv:WMdmTLNU9NAHttV5xfClZZ2CaRMPysBoz1HqoxW98C0=,tag:ZA+ms7KOegzwEg18vJuJQA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:U3zAhXlc0MM+oRQ1UNbvNAj+WGdZ87WldlWo9VwV7Q==,iv:6RzMRBvQDa838R/irjh01htxYlyjFa0sIxKmpFfVKlY=,tag:J0rZnMQsqxdOynrWIuNYeQ==,type:str]
+    #ENC[AES256_GCM,data:pP4UHJVK00OOgYOCJuvN6WFidS5EMAdrEmxhxAcU76evBVfue3fGYfp59uPE5wQyVAlN510Hm5bhuci5Pckvdhi9lShSeXRmz7gBvwjfsAdLjA==,iv:uauxJmHZVFy8gImghtR7p26UuaB6jOFzXj/ur81Em/s=,tag:7QgTJ7FhvdqLxgi3M1T28w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:r8Gl3Jj0Dx1pc6AScoBp,iv:M1yW0X+NIq2B7wdnsAbtGHCmNu8W8cFpV67YNuiVats=,tag:0/CCnhJ8OFF6iM8xpxW/hQ==,type:str]
+    #ENC[AES256_GCM,data:MyIDQg6o8Dd1BxYwwv3SL/N6zSmwVPDO3ywSF3e6FVNP,iv:LCgqt5jrHrzW7eLyO4+DXMTT9p1KLU5riEmhXRuFmdA=,tag:I5IUGTIVjcoVjQI3sMUj1w==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:10JvvWpaf/HL1WtZ6y4Z,iv:ed7s8CMv50xbvpZNCpzUX9ayxxYjc6D5YvxPbgR+BeU=,tag:jzXXLRwSD1YCEqzBgkPu+Q==,type:str]
+    #ENC[AES256_GCM,data:MHPlSrjmrsyJgKvmF8Kyap0oSJEI1o+amp+03LPktGlLqhb9N46+x2waObEFsX5SXnOT287VXerD71XBlwk0TqFcViXRdLSN0O0xeGbATNM=,iv:NUzdnlbK6y9noCV+pUrEJknctvFvUZT/1OBuSEx3Wbs=,tag:SjiYi3ayu+EOfe3yXb7BXA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:7B8IikLXmgOhy8hPbsP1,iv:Bubz6kF1eTaH9t/SXiTlRYz+qGBPsESVNdkjhg5sbkM=,tag:f5cTxHNlIvEfMtRxsKt3qA==,type:str]
+    #ENC[AES256_GCM,data:5n11AEUZtxa6r1OEdYsEpDdwx7RBTysmnCkqQHafhT3Y/06qFZyMVcFyWxvdEGUhdPU8mjVzJ0x+kv2nuOOxX5dlzSW8h9j6+koKiInhQJG1lMNrbqZf,iv:CM6uhyTroEeFfrAuSPShIGioiE68rpfM9aQx6FDGDLw=,tag:evqo7otwykWmG2lwjqhP7Q==,type:comment]
+    #ENC[AES256_GCM,data:LyoFL66Bi6QVuEs5pQjLcZf1rgMwImED2tS/BK3j3D8fI/RAhwnuxY536OgvoOutwKDPjYTL71x7MjphJXMkA8WvTQwGToAP1dDUnh6ttnCuqvd3ocgs4YUfvVUX/yjhQNqMG2ZL6eg/oxD1b1VND1Qzom5lpyZN3lbGtQ==,iv:b7xkSIHBth7rOAK3tcBWAt/x/elDea34Z61GIzU4Ecw=,tag:t7q9lK59L3UfILlEvDlyGw==,type:comment]
+    #ENC[AES256_GCM,data:QJTw02yXk4SsP2zFYSRBbqYQE79Itwxi0x/Pq5ptQf6EcOya8jTypJfMzMbjMX68W8Gn98gNlGl0wGErPAQ/VwJMnekt9DS3Wp0pNeT7pNw=,iv:Mrl/fSDOTL69bcKR5jR6WPOobEOg43/18/Oe4iSVMcg=,tag:lz8jvGvLQ5nkEBXD+WwpVA==,type:comment]
+    #ENC[AES256_GCM,data:EEg2pO3hXIMcITDit0eVCCRkMrjdS0bDUA09xOyJs5tCxCCjVR2uGuMiauOuAcoPZ23uo6+x,iv:PB4lzERZgii8Z/TaH/7m/0FvVquKPYCTFio+6B7DhhU=,tag:fvtg7/J53PCU6Kp4t/qVQA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:nkB/0E/HNqBxp87S,iv:sQ/7CZcIW/dk6fT9sQYttFmXReC+01v5xtLfdW2QDSs=,tag:SMHulqBCexWe/RXmMrdupw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:sRBUXwViCK0orscsJ0hKlFY=,iv:MfAfZs9AGUa1XE79zYoqvlbkOYFJFXPeX2qVwfiJaYc=,tag:BM6Y0dB5Ws+Y4CX+jfK1cA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:R94ibG9z79cn7kTJRIeawJAroTdAZnZe8q5MDRmtPEE=,iv:ZK8p1GBKfRDB78GHRYNV/2yVcTnW+5wyVGm7W7XOJB4=,tag:+BDzktbrEGFXWHx3t6zZuw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:S2ZYpqUumne1SHvT+71BEV4FS19NllvOgRad9nxgbP4ztxOKT1o3Og==,iv:SRyWCRN0dUXAosUbnCspuRoOWJpcEnOxgyfXuT+uEpA=,tag:JSs1slgG+9P7NEpwdW27mQ==,type:str]
+    #ENC[AES256_GCM,data:rs9LcvVJB3hrb3Ua7wCRXxz2acJSpTvuBYI17k7UC8qRIAbbtZOA5TZRBajvqd19si5F5vTpHdTFLBDZ9bbsHQ==,iv:n4OyTP9p1X85vdrTjHohRJuTqz41kVv8Fy2U/JnuOys=,tag:daBCfuP0kt+oysSnN8pY3g==,type:comment]
+    #ENC[AES256_GCM,data:HdriRWvP/ZohJIic3VDDluiNeW1/Z//nma6POsLdBsJeqxNRpchFXvZ3mLmogTZ7R6+I/lGtsj4=,iv:PxNsjioh6/fC+iN2DKUESZ5jhey110GnrZKyVi0RDLY=,tag:CpQeCQs+/82uUEBE/v2vbg==,type:comment]
+    #ENC[AES256_GCM,data:XiSZmEuKTLsjj6BfM8w0sV/KffgxEYFyAg==,iv:9kkTvDBYCZw99h9x9+emL4t9DCIvuiObLl5a7VKuDYw=,tag:cTlb6MSmLxUrDtDZGmho3w==,type:comment]
+    #ENC[AES256_GCM,data:cZ88dEkW/SDRQ8RPvQMf0zWKcV2OrTPDpPOV+DvhD8GtEDQ2WbvY5TGs0TuveK0AQAjER1k6lkuis7Kd1eq1S8Z+J8FtmmOBRbXb7Yg=,iv:kb2lQuMGr+kq/rlkIdbUSaKnjoLrBlNFISBMcd4hMQY=,tag:eUtaSY9FLY+XoA0NqU7uBA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:EGNW2/u0IrvpgnUzaDwB9Rp7iA20fUFQb/9g0CT3JF6hOQNRIJXPgStR39tn+wNG,iv:GGZ2qzt1azfjKedYSXWJIaUMe9l+5nA5nKXDmjih14U=,tag:rKjho3CSl77p1WBd/yQqkQ==,type:str]
+    #ENC[AES256_GCM,data:2dNzUieCFmEcgXblbtL3NEMqurra+43g4IeHHiQZdfpm4LN+F8SIrlZrulbC1iSj0ietGM4SMR/vOk8ChypVOqw+AJ/2/JM=,iv:PTaEaziT9o7VCDTnWlTVFX0R/NHVHtBsM2vDrGohBQg=,tag:F7MEA1Ch1zZt81NDMx/atg==,type:comment]
+    #ENC[AES256_GCM,data:Jj8QEPZm/sybl9WzFy2wuJokUjeq8l/LeRnQ9zZu3T3tWJuts6/grCOOLMgyahaSvHbhyI2D,iv:ugQtJqhx7Lv5jIIHrrpuZvhp3/OZF8KqtqtOYPNwUKw=,tag:BR+rhJZeOWjQLV1WATUNOg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:Ouk51wiczw==,iv:uSi8fmTSB8lUR7UFlQCQh6VBS5SByGskW0GmvPLaNVk=,tag:lFP+kBm/7VQkh2kJbJTy8w==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:F47pKieOyWsWGBffpRmtQ5dRccw=,iv:wO7MYMUMhDUtFgZ0n69FUo6BAXMSp3WsFrUlpdX6gQ8=,tag:eD/eYU7KszND2nluLuTi3w==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:oRKPVxsNzxgeO6I=,iv:0/rJbHC75g8r//5FLlCRxkLdN0laSNAgInsZWzoc1+8=,tag:NKm8vD178iPEst3ncarKQw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:IywUMFs0RMNEIf8ILA4e,iv:10e505hCCDvMAOrIOatyYyRb4hp0coMjH7o8TgjMh2w=,tag:bvvahhQp/GvIE+S6tsuFXQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:ECQZiVdQJ8QpnOHTOCYYueiuIbU3/HAhmA==,iv:rou9euKdMr5KGmtA3ozfVj/XDt15THYV/mHhaYpw5eo=,tag:kLtNLMpP1SOULvUZ0E5vKQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:5MDZWXEiupwC6ZFZ73E2meN/41JzX3sbFn8lKittqg==,iv:uTou2NgKagq56MzEcJeGcCXHfyvrkhvEgObP7DJb7MI=,tag:xMF5R2TLPJVs+iBYRmvZQQ==,type:str]
+    #ENC[AES256_GCM,data:fmSTVUqImGbefEeQi6QwAGdUBmv8KNG/qlHRqadO/vT3ELKuExM=,iv:DLc/+fzRsbLxqpRC8SLVtPAN2KLv0nOP57xMJtmEZhk=,tag:j5Gkevb8OxyZph5RkKLwOQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:4WAcHSRO+SSyLHi9wxfttZzhe84=,iv:qtS+/y15eHFLAhl+VrRyW+YJUMTSFeLlOhaw0sHLvRQ=,tag:YmjogMY0V+dYsBqXVJ60Rg==,type:str]
+    #ENC[AES256_GCM,data:eWTr9uGKxluCuxNTY9U=,iv:rPLNBqVXiNrP0i21dNWHIncuKjFdkGLbCCObluYTOgw=,tag:JaMI5zRXpj5nwlKVqOZHDA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:zDf1p28WrUiVNcZ2sg==,iv:FHVedVG7OY5lWIPrBaKIjFZM1zS1OI6dxO7rTAI8jes=,tag:exQY/LHQRrnOGLcLtbEnGg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:Zv8Q+UuKjSmvTDnKog==,iv:itn2JY71Lguk+ZsldHfPmHTn24BBGNFxM5usI2Wr0C4=,tag:5UwI23NGxwyVvo43MJmITQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Np2dZQ==,iv:vnYj1vNY+wcNvbiiXO3jB8c1twCGQc1nXNLq3wlyRx8=,tag:OWIUZ8SObCtnVSTbCbf6ww==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5dDVHK0lTaURFZGQxY0Rw
-            em5pR3ptQWdTSGo1ZGxHcXczQkREL2Vvb1dFClpCT20zRzlLZC9reFNUVkNVL3Fv
-            RUNFbjVoeGRHWC9TOVF6dVJEYzVNWEUKLS0tIFpXNDMxN3ptYXRrUzRaNWtMei9T
-            VDN1OFVMdHR0M0E0WVRrdkJtK2NkMUEKojuRq4jR2Rtkk0y+6PrDU3x8A8RLcSqR
-            PTBgNIk4S5V56OFKHNbA9Pc6YooXdKabh6bwh8EuJoZO6Q7LkZiz2Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvRlNMVXI2VFp4WXZwWnpk
+            NURkbXVSeXJ5MUE4cDBLMVk0RzJjZVZTa2g4CkxtREtWUDVoOE9RSEF5OFBKc2VH
+            ejNBTkcvSXM3ZVZZOHJXTzFFQ3NYU3cKLS0tIG5LdEpsRi9ha2F1TnpVbExrTjJY
+            bjZLMlV0MDhyRUliMnFaajUwRktXeGcKM+iPi9AEGu0zQWSnXQHYDHrxbUdjqReS
+            Z2xBVt+/7XaS65RwmjRhErEH8ry8UahZie+zsEeQDA49eeo/Z0JdxA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:28:17Z"
-    mac: ENC[AES256_GCM,data:lpWT0KoEqCrsa1M0D18MiVBmVOGtQLO9ze2SpSFbh9qy3Tm+oG056Spi2ijN0UPpYPL6+SsXsNPLgKmAbVJRGb/TnebaNX733w2y0xXFgv950M0k4UF5LGSt8LzugG/Rk1HgWEA8ccZ3+34EK7+W5klvrU91PFUc6tW6SE2Mqkk=,iv:Yo9qWJHArGr/w1U3+jextW31SBVXmcvA2+fy397dktk=,tag:KjcNLHHy+55/qZfUoy9bHw==,type:str]
+    lastmodified: "2025-01-19T19:43:23Z"
+    mac: ENC[AES256_GCM,data:VZfpY7w2fWFDT6vXY14/8fHuDk1WYA82xwbFMmEA1eqRW7t/F/j71QKYvCoC00G24UnkObYeWtuCPb2ne/8Bjo9fbB+CCpC/9xKiTPC4KxYPAe+qPbXsHxYaHDjnhqCvgGZ3Akcd0mdwPSFT3Q9DHJGuUvepJ2u+d84FgWYrJAQ=,iv:TFiG9XMQncTIqv/QodH+RynGDGOBeUE1C8mhIrAv/Ao=,tag:Jx+5NRhlpaO/xDxB5FjFZg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
