--- a/clusters/main/kubernetes/system/intel-gpu-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/system/intel-gpu-plugin/app/helm-release.yaml
@@ -9,10 +9,10 @@ spec:
         spec:
 
             chart: intel-gpu-plugin
-            version: 0.4.0
+            version: 0.31.1
             sourceRef:
                 kind: HelmRepository
-                name: truecharts
+                name: intel
                 namespace: flux-system
             interval: 5m
     install:
@@ -24,4 +24,3 @@ spec:
         crds: CreateReplace
         remediation:
             retries: 3
-    values:
